# aoc2022

./: .gitignore  README.md  Taskfile  answers  answers.json
.github/workflows/: commit.yml  mypy.yml
python/src/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  template.py  test_answers.py  utils.py
rust/: Cargo.toml
rust/src/: benchmark.rs  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  main.rs  utils.rs
