[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rstest = "0.16"
json = "0.12"
itertools = "0.10"
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
path = "src/benchmark.rs"
